<resources>
    <string name="app_name">OPLibrary</string>
    <string name="login_title">Login</string>
    <string name="user_id_label">User Id</string>
    <string name="enter_user_id_hint">Enter User Id</string>
    <string name="password_label">Password</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="email_id_label">Email Id</string>
    <string name="enter_email_id_hint">Enter Email-id</string>
    <string name="login_button_text">Login</string>
    <string name="home">Home</string>
    <string name="signup_button_text">Signup</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="back_to_login_button_text">Back to Login</string>
    <string name="add_book_nav">Add Book</string>
    <string name="issue_book_nav">Issue Book</string>
    <string name="return_book_nav">Return Book</string>
    <string name="search_book_nav">Search Book</string>
    <string name="list_books_nav">List Books</string>
    <string name="logout_nav">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_book_title">Add Book</string>
    <string name="isbn_label">ISBN</string>
    <string name="welcome_message">Welcome %s!</string>
    <string name="enter_isbn_hint">Enter ISBN</string>
    <string name="book_title">Book Title</string>
    <string name="enter_book_title">Enter Book Title</string>
    <string name="publisher">Publisher</string>
    <string name="qty_stock">Qty Stock</string>
    <string name="enter_quantity_in_stock">Enter Quantity in Stock</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter Price</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="issue_book">Issue Book</string>
    <string name="book_id">Book Id</string>
    <string name="enter_book_id">Enter Book Id</string>
    <string name="customer_name">Customer Name</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="customer_email">Customer Email</string>
    <string name="quantity_issued">Quantity Issued</string>
    <string name="enter_quantity_issued">Enter Quantity Issued</string>
    <string name="date_of_issue">Date of Issue</string>
    <string name="return_book">Return Book</string>
    <string name="issue_id">Issue Id</string>
    <string name="enter_issue_id">Enter Issue Id</string>
    <string name="quantity_returned">Quantity Returned</string>
    <string name="enter_quantity_returned">Enter Quantity Returned</string>
    <string name="date_of_return">Date of Return</string>
    <string name="search_book">Search Book</string>
    <string name="search">Search</string>
    <string name="list_of_books">List of Books</string>
    <string name="placeholder">Placeholder</string>
</resources>