<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav1">
    <item
        android:id="@+id/nav_add_book"
        android:icon="@drawable/nav_icon"
        android:title="@string/add_book_nav" />
    <item
        android:id="@+id/nav_issue_book"
        android:icon="@drawable/nav_icon"
        android:title="@string/issue_book_nav" />
    <item
        android:id="@+id/nav_return_book"
        android:icon="@drawable/nav_icon"
        android:title="@string/return_book_nav" />
    <item
        android:id="@+id/nav_search_book"
        android:icon="@drawable/nav_icon"
        android:title="@string/search_book_nav" />
    <item
        android:id="@+id/nav_list_books"
        android:icon="@drawable/nav_icon"
        android:title="@string/list_books_nav" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/nav_icon"
        android:title="@string/logout_nav" />
</menu>