<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:text="@string/add_book_title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/isbn_label"
            android:textColor="@color/white"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtISBN"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_isbn_hint"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/book_title"
            android:textColor="@color/white"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtBookTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_book_title"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/publisher"
            android:textColor="@color/white"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnPublisher"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/qty_stock"
            android:textColor="@color/white"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtQtyStock"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_quantity_in_stock"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>